--- a/CatsAPI/Cats.RestAPI.csproj
+++ b/CatsAPI/Cats.RestAPI.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Controllers\TransportBidPlanDetailController.cs" />
     <Compile Include="Controllers\TransportBidQuotationController.cs" />
     <Compile Include="Controllers\TransportBidQuotationHeaderController.cs" />
+    <Compile Include="Controllers\TransportRequisitionDetailController.cs" />
     <Compile Include="Controllers\TransportOrderDetailController.cs" />
     <Compile Include="Controllers\TransportOrderController.cs" />
     <Compile Include="Controllers\TransportRequisitionController.cs" />
@@ -246,6 +247,7 @@
     <Compile Include="Models\TransportBidPlanDetail.cs" />
     <Compile Include="Models\TransportBidQuotation.cs" />
     <Compile Include="Models\TransportBidQuotationHeader.cs" />
+    <Compile Include="Models\TransportRequisitionDetailViewModel.cs" />
     <Compile Include="Models\TransportOrder.cs" />
     <Compile Include="Models\TransportOrderDetail.cs" />
     <Compile Include="Models\TransportRequisition.cs" />
