--- a/Services/Cats.Services.Logistics/Cats.Services.Logistics.csproj
+++ b/Services/Cats.Services.Logistics/Cats.Services.Logistics.csproj
@@ -89,6 +89,7 @@
     <Compile Include="IReceiptPlanService.cs" />
     <Compile Include="ITransferService.cs" />
     <Compile Include="ITransporterPaymentRequestService.cs" />
+    <Compile Include="ITransportRequisitionDetailService.cs" />
     <Compile Include="LoanReciptPlanDetailService.cs" />
     <Compile Include="LoanReciptPlanService.cs" />
     <Compile Include="LocalPurchaseDetailService.cs" />
@@ -99,6 +100,7 @@
     <Compile Include="SupportTypeService.cs" />
     <Compile Include="TransferService.cs" />
     <Compile Include="TransporterPaymentRequestService.cs" />
+    <Compile Include="TransportRequisitionDetailService.cs" />
     <Compile Include="UtilizationDetailSerivce.cs" />
     <Compile Include="DeliveryDetailService.cs" />
     <Compile Include="DeliveryService.cs" />
