Remove Multiple config files with the same functionality from d/t layers

--- a/Services/Cats.Services.Common/App.config
+++ b/Services/Cats.Services.Common/App.config
@@ -82,6 +82,9 @@
             <setting name="DeliveryWorkflow" serializeAs="String">
                 <value>DeliveryWorkflow</value>
             </setting>
+            <setting name="AdjustmentWorkflow" serializeAs="String">
+                <value>AdjustmentWorkflow</value>
+            </setting>
         </Cats.Services.Common.ApplicationSettings>
     </applicationSettings>
 </configuration>
