--- a/Services/Cats.Services.Workflow/Cats.Services.Workflow.csproj
+++ b/Services/Cats.Services.Workflow/Cats.Services.Workflow.csproj
@@ -67,12 +67,6 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
-    <Compile Include="Config\ApplicationSettings.Designer.cs">
-      <DependentUpon>ApplicationSettings.settings</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <Compile Include="Config\ApplicationSettingService.cs" />
     <Compile Include="Config\DashboardMapping.cs" />
     <Compile Include="Config\IApplicationSettingService.cs" />
     <Compile Include="Enum\WorkflowState.cs" />
@@ -163,10 +157,7 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Config\ApplicationSettings.settings">
-      <Generator>PublicSettingsSingleFileGenerator</Generator>
-      <LastGenOutput>ApplicationSettings.Designer.cs</LastGenOutput>
-    </None>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
