CATS-1490, ReleifRequisitionDetail endpoit is added.

--- a/CatsAPI/Cats.RestAPI.csproj
+++ b/CatsAPI/Cats.RestAPI.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Controllers\RegionalPSNPPlanDetailController.cs" />
     <Compile Include="Controllers\ReleifRequisitionController.cs" />
     <Compile Include="Controllers\RationController.cs" />
+    <Compile Include="Controllers\ReliefRequistionDetailController.cs" />
     <Compile Include="Controllers\SupportTypeController.cs" />
     <Compile Include="Controllers\TransactionController.cs" />
     <Compile Include="Controllers\RegionalRequestController.cs" />
