--- a/CatsAPI/Cats.RestAPI.csproj
+++ b/CatsAPI/Cats.RestAPI.csproj
@@ -250,6 +250,7 @@
     <Compile Include="Models\TransportOrder.cs" />
     <Compile Include="Models\TransportOrderDetail.cs" />
     <Compile Include="Models\TransportRequisition.cs" />
+    <Compile Include="Models\TransportRequisitionDetail.cs" />
     <Compile Include="Models\Unit.cs" />
     <Compile Include="Models\UserHub.cs" />
     <Compile Include="Models\UserProfile.cs" />
