CATS-1400 Dashboard Fix

--- a/Services/Cats.Services.Common/ApplicationSettings.settings
+++ b/Services/Cats.Services.Common/ApplicationSettings.settings
@@ -77,5 +77,8 @@
     <Setting Name="DeliveryWorkflow" Type="System.String" Scope="Application">
       <Value Profile="(Default)">DeliveryWorkflow</Value>
     </Setting>
+    <Setting Name="AdjustmentWorkflow" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">AdjustmentWorkflow</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
