--- a/Web/Web.config
+++ b/Web/Web.config
@@ -86,13 +86,14 @@
       </parameter>
     </appender>
   </log4net>
+  
+  <connectionStrings>
+  <add name="elmah-sql" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 
-<connectionStrings>
-    <add name="elmah-sql" connectionString="Data Source=.\MsSql12;Initial Catalog=Cats-v-1-3-v6;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=.\MsSql12;Initial Catalog=Cats-v-1-3-v6;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=.\MsSql12;Initial Catalog=Cats-v-1-3-v6;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=.\MsSql12;Initial Catalog=Cats-v-1-3-v6;Integrated Security=True;" providerName="System.Data.SqlClient" />
-</connectionStrings>
 
   <appSettings>
     <add key="log4net.Internal.Debug" value="true" />
