--- a/Web/Web.config
+++ b/Web/Web.config
@@ -87,13 +87,19 @@
     </appender>
   </log4net>
   
+  <!--<connectionStrings>
+  <add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=cats;integratedSecurity=true;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=cats;integratedSecurity=true;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=.;Initial Catalog=cats;integratedSecurity=true;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=cats;integratedSecurity=true;" providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
+  
   <connectionStrings>
-  <add name="elmah-sql" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="CatsContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="SecurityContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-    <add name="LocalizationContext" connectionString="Data Source=192.168.10.251;Initial Catalog=CatsV6;User=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
+    <add name="elmah-sql" connectionString="Data Source=.;Initial Catalog=cats;User=Administrator;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
+    <add name="CatsContext" connectionString="Data Source=.;Initial Catalog=cats;User=Administrator;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
+    <add name="SecurityContext" connectionString="Data Source=.;Initial Catalog=cats;User=Administrator;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
+    <add name="LocalizationContext" connectionString="Data Source=.;Initial Catalog=cats;User=Administrator;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
   </connectionStrings>
-
 
   <appSettings>
     <add key="log4net.Internal.Debug" value="true" />
